src/rfx/tests/preprocessor/PoundPound_1.approved.out
exit_status:0
output:
Source output:
    #line 1 "D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/PoundPound_1.rfx"
    
    
    
    
    
    
    
    
    Hello POUND_POUND There;
Diagnostic output:
    D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/PoundPound_1.rfx:7:21: error: '##' cannot appear at start of macro expansion
    #define POUND_POUND ##
                        ^
